--- a/app/src/main/res/layout/fragment_address_info.xml
+++ b/app/src/main/res/layout/fragment_address_info.xml
@@ -91,6 +91,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView20">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/residentialAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/euclid_circular_b_light"
@@ -110,6 +111,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/stateOfResidence"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/euclid_circular_b_light"
@@ -128,6 +130,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/lga"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/euclid_circular_b_light"
