--- a/app/src/main/res/layout/fragment_bank_verification.xml
+++ b/app/src/main/res/layout/fragment_bank_verification.xml
@@ -21,9 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/euclid_circular_b_bold"
+        android:text="Bank verification"
         android:textColor="#1C2129"
         android:textSize="18sp"
-        android:text="Bank verification"
         app:layout_constraintBottom_toBottomOf="@+id/imageView17"
         app:layout_constraintEnd_toStartOf="@+id/imageView19"
         app:layout_constraintStart_toEndOf="@+id/imageView17"
@@ -74,9 +74,9 @@
         android:layout_marginBottom="280dp"
         android:background="@drawable/button"
         android:fontFamily="@font/euclid_circular_b_bold"
+        android:text="Proceed"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        android:text="Proceed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -95,26 +95,27 @@
         app:layout_constraintTop_toBottomOf="@+id/textView22">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/enterBVN"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:letterSpacing="-0.02"
-            android:textSize="14sp"
             android:fontFamily="@font/euclid_circular_b_light"
-            android:hint="Enter BVN" />
+            android:hint="Enter BVN"
+            android:letterSpacing="-0.02"
+            android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="359dp"
+        android:layout_height="45dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="20dp"
-        android:textColor="#802C2B80"
-        android:text="Don’t have access to BVN registered  phone number? Click here"
-        app:layout_constrainedWidth="true"
         android:fontFamily="@font/euclid_circular_b_light"
-        android:textSize="14sp"
+        android:text="Don’t have access to BVN registered  phone number?"
+        android:textColor="#802C2B80"
+        android:textSize="16sp"
+        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
@@ -124,12 +125,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:fontFamily="@font/euclid_circular_b_medium"
+        android:letterSpacing="-0.02"
+        android:text="I don’t have a BVN"
         android:textColor="#0093DA"
         android:textSize="14sp"
-        android:letterSpacing="-0.02"
-        android:fontFamily="@font/euclid_circular_b_medium"
-        android:text="I don’t have a BVN"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="@+id/textView26"
         app:layout_constraintStart_toStartOf="@+id/textView26" />
+
+    <TextView
+        android:id="@+id/textView39"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
+        android:fontFamily="@font/euclid_circular_b_medium"
+        android:letterSpacing="-0.02"
+        android:text="Click here"
+        android:textColor="#0093DA"
+        app:layout_constraintBottom_toBottomOf="@+id/textView26"
+        app:layout_constraintEnd_toEndOf="@+id/textView26"
+        app:layout_constraintHorizontal_bias="0.025"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView26"
+        app:layout_constraintVertical_bias="0.74" />
 </androidx.constraintlayout.widget.ConstraintLayout>
