--- a/app/src/main/res/layout/fragment_login_one.xml
+++ b/app/src/main/res/layout/fragment_login_one.xml
@@ -91,10 +91,24 @@
         android:layout_marginBottom="230dp"
         android:background="@drawable/button"
         android:fontFamily="@font/euclid_circular_b_bold"
+        android:text="Login"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="14sp"
+        android:letterSpacing="-0.02"
+        android:textColor="#0093DA"
+        android:fontFamily="@font/euclid_circular_b_medium"
+        android:text="Forgot Password?"
+        app:layout_constraintEnd_toEndOf="@+id/button8"
+        app:layout_constraintStart_toStartOf="@+id/button8"
+        app:layout_constraintTop_toBottomOf="@+id/button8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
