--- a/app/src/main/res/navigation/mynav.xml
+++ b/app/src/main/res/navigation/mynav.xml
@@ -61,6 +61,9 @@
         <action
             android:id="@+id/action_loginOne_to_signUp"
             app:destination="@id/signUp" />
+        <action
+            android:id="@+id/action_loginOne_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/personalDetail"
