--- a/app/src/main/res/layout/fragment_login_one.xml
+++ b/app/src/main/res/layout/fragment_login_one.xml
@@ -64,10 +64,11 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout14"
+        style="@style/MyTextInputLayoutStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        style="@style/MyTextInputLayoutStyle"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">
@@ -76,10 +77,10 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:letterSpacing="-0.02"
-            android:textSize="14sp"
             android:fontFamily="@font/euclid_circular_b_medium"
-            android:hint="Password" />
+            android:hint="Password"
+            android:letterSpacing="-0.02"
+            android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -111,4 +112,5 @@
         app:layout_constraintEnd_toEndOf="@+id/button8"
         app:layout_constraintStart_toStartOf="@+id/button8"
         app:layout_constraintTop_toBottomOf="@+id/button8" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
