--- a/app/src/main/res/layout/fragment_personal_detail.xml
+++ b/app/src/main/res/layout/fragment_personal_detail.xml
@@ -243,6 +243,7 @@
             android:text="Proceed"
             android:textColor="#FFFFFF"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/textInputLayout12"
             app:layout_constraintStart_toStartOf="@+id/textInputLayout12"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">
